--- a/frontend/public/assets/i18n/en.json
+++ b/frontend/public/assets/i18n/en.json
@@ -5,8 +5,8 @@
     "help": "Help",
     "login": "Login",
     "register": "Register",
-    "firstName": "First name",
     "lastName": "Last name",
+    "firstName": "First name",
     "email": "E-mail",
     "password": "Password",
     "emailError": "Enter a valid e-mail",
@@ -95,7 +95,177 @@
         "howToContactSellerContent": "You can contact a seller by clicking on the \"Contact Seller\" button on the listing page.",
         "returnPolicy": "What is the return policy?",
         "returnPolicyContent": "We do not have a return policy. Buyers should be aware of false advertisements and scams."
-    }
+    },
+    "Nekretnine": "Real estate",
+    "Vozila":"Vehicles",
+    "Poslovi": "Jobs",
+    "Namještaj": "Furniture",
+    "Mobilni uređaji": "Mobile devices",
+    "Bijela tehnika": "Household appliances",
+    "Računari": "Computers",
+    "Video igre": "Video games",
+    "Nakit": "Jewelry",
+    "TV i video": "TV and video",
+    "Biciklizam": "Cycling",
+    "Kućni ljubimci": "Pets",
+    "Foto-video": "Photo-video",
+    "Muzički instrumenti": "Musical instruments",
+    "Satovi": "Watches",
+    "Antikviteti": "Antiques",
+    "Površina (m²)": "Area (m²)",
+    "Lokacija": "Location",
+    "Stanje (novogradnja, starogradnja, renovirano)": "Condition (new construction, old construction, renovated)",
+    "Broj soba": "Number of rooms",
+    "Godina gradnje": "Year of construction",
+    "Tip kuće (samostalna, dvojna, u nizu)": "House type (detached, semi-detached, terraced)",
+    "Dodatno (garaža, dvorište, terasa, bazen)": "Extras (garage, yard, terrace, pool)",
+    "Sprat": "Floor",
+    "Lift (da/ne)": "Elevator (yes/no)",
+    "Namještenost (namješten, polunamješten, nenamješten)": "Furnishing (furnished, semi-furnished, unfurnished)",
+    "Namjena (građevinsko, poljoprivredno, industrijsko)": "Purpose (construction, agricultural, industrial)",
+    "Pristupni put (da/ne)": "Access road (yes/no)",
+    "Vrsta garaže (privatna, zajednička, podzemna)": "Garage type (private, shared, underground)",
+    "Sigurnosni sistem (da/ne)": "Security system (yes/no)",
+    "Tip (kancelarija, lokal, magacin)": "Type (office, shop, warehouse)",
+    "Prilagođeno za invalidna lica (da/ne)": "Accessible for disabled persons (yes/no)",
+    "Pristup kamionima (da/ne)": "Truck access (yes/no)",
+    "Visina plafona (m)": "Ceiling height (m)",
+    "Marka": "Brand",
+    "Model": "Model",
+    "Godina proizvodnje": "Year of manufacture",
+    "Gorivo (benzin, dizel, električni, hibrid)": "Fuel (petrol, diesel, electric, hybrid)",
+    "Kubikaža (cm³)": "Engine capacity (cm³)",
+    "Snaga motora (kW/KS)": "Engine power (kW/HP)",
+    "Mjenjač (manuelni, automatski)": "Transmission (manual, automatic)",
+    "Kilometraža": "Mileage",
+    "Tip": "Type",
+    "Tip vozila (kombi, kamion, prikolica)": "Vehicle type (van, truck, trailer)",
+    "Kapacitet (t)": "Capacity (t)",
+    "Dimenzije tovarnog prostora": "Cargo space dimensions",
+    "Radni sati": "Operating hours",
+    "Tip plovila": "Vessel type",
+    "Dužina (m)": "Length (m)",
+    "Broj kreveta": "Number of beds",
+    "Opremljenost (kuhinja, kupatilo)": "Equipment (kitchen, bathroom)",
+    "Tip posla (stalni, honorarni, sezonski)": "Job type (permanent, part-time, seasonal)",
+    "Plata": "Salary",
+    "Industrija": "Industry",
+    "Radno vrijeme": "Working hours",
+    "Struka": "Profession",
+    "Radno iskustvo (godine)": "Work experience (years)",
+    "Materijal (drvo, metal, staklo, tkanina)": "Material (wood, metal, glass, fabric)",
+    "Stanje (novo, polovno)": "Condition (new, used)",
+    "Tip ekrana (LCD, AMOLED)": "Screen type (LCD, AMOLED)",
+    "Veličina ekrana (inch)": "Screen size (inch)",
+    "Energetska klasa": "Energy class",
+    "Procesor": "Processor",
+    "RAM (GB)": "RAM (GB)",
+    "Desktop računari": "Desktop computers",
+    "Grafička karta": "Graphics card",
+    "Kapacitet diska": "Disk capacity",
+    "Laptopi": "Laptops",
+    "Veličina ekrana": "Screen size",
+    "Kompjuterska oprema": "Computer equipment",
+    "Tip (monitor, tastatura, miš)": "Type (monitor, keyboard, mouse)",
+    "Softver": "Software",
+    "Tip (operativni sistem, antivirus, poslovni softver)": "Type (operating system, antivirus, business software)",
+    "Platforma (PC, konzola, mobilni)": "Platform (PC, console, mobile)",
+    "Žanr": "Genre",
+    "Prstenovi": "Rings",
+    "Veličina": "Size",
+    "Sa dragim kamenom (da/ne)": "With gemstone (yes/no)",
+    "Ogrlice": "Necklaces",
+    "Dužina (cm)": "Length (cm)",
+    "Narukvice": "Bracelets",
+    "Minđuše": "Earrings",
+    "Tip (na klipsu, probušene, viseće)": "Type (clip-on, pierced, dangling)",
+    "Televizori": "TVs",
+    "Rezolucija (HD, Full HD, 4K, 8K)": "Resolution (HD, Full HD, 4K, 8K)",
+    "Pametni TV (da/ne)": "Smart TV (yes/no)",
+    "Projektori": "Projectors",
+    "Svjetlina (lumen)": "Brightness (lumens)",
+    "Maksimalna rezolucija": "Maximum resolution",
+    "Video oprema": "Video equipment",
+    "Tip (Blu-ray plejer, DVD plejer, set-top box)": "Type (Blu-ray player, DVD player, set-top box)",
+    "Tip bicikla": "Bicycle type",
+    "Veličina rama (inch)": "Frame size (inch)",
+    "Planinski bicikli": "Mountain bikes",
+    "Broj brzina": "Number of speeds",
+    "Električni bicikli": "Electric bikes",
+    "Autonomija baterije (km)": "Battery range (km)",
+    "Dodaci za bicikle": "Bicycle accessories",
+    "Tip dodatka (kaciga, svjetla, zaključavanje)": "Accessory type (helmet, lights, lock)",
+    "Vrsta ljubimca": "Pet type",
+    "Starost ljubimca": "Pet age",
+    "Pol ljubimca (muški, ženski)": "Pet gender (male, female)",
+    "Psi": "Dogs",
+    "Rasa": "Breed",
+    "Vakcinacija (da/ne)": "Vaccination (yes/no)",
+    "Mačke": "Cats",
+    "Sterilizacija (da/ne)": "Sterilization (yes/no)",
+    "Ptice": "Birds",
+    "Vrsta": "Species",
+    "Ribe": "Fish",
+    "Vrsta (slatkovodne, morske)": "Type (freshwater, saltwater)",
+    "Tip akvarijuma": "Aquarium type",
+    "Foto-Video": "Photo-Video",
+    "Tip uređaja": "Device type",
+    "Rezolucija": "Resolution",
+    "Fotoaparati": "Cameras",
+    "Tip (DSLR, mirrorless, kompaktni)": "Type (DSLR, mirrorless, compact)",
+    "Kamere": "Camcorders",
+    "Tip (akcione, profesionalne, sigurnosne)": "Type (action, professional, security)",
+    "Dronovi": "Drones",
+    "Maksimalna visina leta (m)": "Maximum flight altitude (m)",
+    "Autonomija baterije (min)": "Battery life (min)",
+    "Tip instrumenta": "Instrument type",
+    "Žičani instrumenti": "String instruments",
+    "Tip (gitara, violina, ukulele)": "Type (guitar, violin, ukulele)",
+    "Broj žica": "Number of strings",
+    "Klasični instrumenti": "Classical instruments",
+    "Perkusioni instrumenti": "Percussion instruments",
+    "Tip mehanizma": "Mechanism type",
+    "Ručno nošeni": "Wristwatches",
+    "Materijal narukvice (koža, metal, plastika)": "Bracelet material (leather, metal, plastic)",
+    "Džepni": "Pocket watches",
+    "Materijal kućišta (zlato, srebro, čelik)": "Case material (gold, silver, steel)",
+    "Pametni satovi": "Smartwatches",
+    "Funkcije": "Functions",
+    "Stanje (restaurirano, originalno)": "Condition (restored, original)",
+    "Period": "Period",
+    "Umjetnine": "Artworks",
+    "Potpis autora (da/ne)": "Author's signature (yes/no)",
+    "Kolekcionarski predmeti": "Collectibles",
+    "Zemljište": "Land",
+    "Garaže": "Garages",
+    "Kuće": "Houses",
+    "Stanovi i apartmani": "Flats and apartments",
+    "Poslovni prostori": "Office spaces",
+    "Skladišta": "Warehouses",
+    "Konzole": "Consoles",
+    "Kompjuter": "PC",
+    "Periferija": "Peripherals",
+    "Za kuhinju": "For kitchen",
+    "Za kupatilo": "For bathroom",
+    "Ostalo": "Other",
+    "Telefoni": "Phones",
+    "Tableti": "Tablets",
+    "eBook tableti": "eBook tablets",
+    "Za dnevni boravak": "For living room",
+    "Za spavaću sobu": "For bedroom",
+    "Ponuda poslova": "Job offers",
+    "Potražnja poslova": "Job requests",
+    "Automobili": "Cars",
+    "Motori": "Motorcycles",
+    "Transportna vozila": "Commercial vehicles",
+    "Poljoporivredna vozila": "Agricultural vehicles",
+    "Nautika": "Nautical",
+    "Radne mašine": "Work machines",
+    "Kamperi": "Campers"
+
+
+
+
 
 
 }
