--- a/frontend/public/assets/i18n/mk.json
+++ b/frontend/public/assets/i18n/mk.json
@@ -92,5 +92,172 @@
         "howToContactSellerContent": "Možete da kontaktirate prodavač kliknuvajki na kopčeto \"Kontaktiraj\" na stranata na oglasot.",
         "returnPolicy": "Kakva e politikata za vraḱanje?",
         "returnPolicyContent": "Nemame politika za vraḱanje. Kupuvačite treba da bidat svesni za lažni reklami i prevari."
-    }
+    },
+    "Nekretnine": "Nekretnini",
+    "Vozila": "Vozila",
+    "Poslovi": "Raboti",
+    "Namještaj": "Meštaj",
+    "Mobilni uređaji": "Mobilni uredji",
+    "Bijela tehnika": "Bela tehnika",
+    "Računari": "Komputeri",
+    "Video igre": "Video igri",
+    "Nakit": "Nakit",
+    "Tv i video": "TV i video",
+    "Biciklizam": "Vozene na velosiped",
+    "Kućni ljubimci": "Domashni ljubimci",
+    "Foto-video": "Foto-video",
+    "Muzički instrumenti": "Muzički instrumenti",
+    "Satovi": "Časovnici",
+    "Antikviteti": "Antikviteti",
+    "Površina (m²)": "Površina (m²)",
+    "Lokacija": "Lokacija",
+    "Stanje (novogradnja, starogradnja, renovirano)": "Sostojba (novogradba, starogradba, renovirano)",
+    "Broj soba": "Broj na sobi",
+    "Godina gradnje": "Godina na gradba",
+    "Tip kuće (samostalna, dvojna, u nizu)": "Tip na kuka (samostojna, dvojna, vo niza)",
+    "Dodatno (garaža, dvorište, terasa, bazen)": "Dopolnitelno (garaža, dvorište, terasa, bazen)",
+    "Sprat": "Sprat",
+    "Lift (da/ne)": "Lift (da/ne)",
+    "Namještenost (namješten, polunamješten, nenamješten)": "Namestenost (namesten, polunamesten, nenamesten)",
+    "Namjena (građevinsko, poljoprivredno, industrijsko)": "Namena (građevinsko, poljoprivredno, industrijsko)",
+    "Pristupni put (da/ne)": "Pristapen pat (da/ne)",
+    "Vrsta garaže (privatna, zajednička, podzemna)": "Vid na garaža (privatna, zajednička, podzemna)",
+    "Sigurnosni sistem (da/ne)": "Sigurnosni sistem (da/ne)",
+    "Tip (kancelarija, lokal, magacin)": "Tip (kancelarija, lokal, magacin)",
+    "Prilagođeno za invalidna lica (da/ne)": "Prilagodeno za invalidni lica (da/ne)",
+    "Pristup kamionima (da/ne)": "Pristap za kamioni (da/ne)",
+    "Visina plafona (m)": "Visina na plafon (m)",
+    "Marka": "Marka",
+    "Model": "Model",
+    "Godina proizvodnje": "Godina na proizvodstvo",
+    "Gorivo (benzin, dizel, električni, hibrid)": "Gorivo (benzin, dizel, električen, hibrid)",
+    "Kubikaža (cm³)": "Kubikaza (cm³)",
+    "Snaga motora (kW/KS)": "Moćnost na motor (kW/KS)",
+    "Mjenjač (manuelni, automatski)": "Menjač (manualen, avtomatski)",
+    "Kilometraža": "Kilometraža",
+    "Tip": "Tip",
+    "Tip vozila (kombi, kamion, prikolica)": "Tip na vozilo (kombi, kamion, prikolica)",
+    "Kapacitet (t)": "Kapacitet (t)",
+    "Dimenzije tovarnog prostora": "Dimenzii na tovaren prostor",
+    "Radni sati": "Rabotni časovi",
+    "Tip plovila": "Tip na plovilo",
+    "Dužina (m)": "Dolzina (m)",
+    "Broj kreveta": "Broj na kreveti",
+    "Opremljenost (kuhinja, kupatilo)": "Opremlenost (kuhinja, kupatilo)",
+    "Tip posla (stalni, honorarni, sezonski)": "Tip na rabota (stalna, honorarna, sezonska)",
+    "Plata": "Plata",
+    "Industrija": "Industrija",
+    "Radno vrijeme": "Raboten čas",
+    "Struka": "Struka",
+    "Radno iskustvo (godine)": "Raboten iskustvo (godini)",
+    "Materijal (drvo, metal, staklo, tkanina)": "Materijal (drvo, metal, staklo, tkanina)",
+    "Stanje (novo, polovno)": "Sostojba (novo, polovno)",
+    "Tip ekrana (LCD, AMOLED)": "Tip na ekran (LCD, AMOLED)",
+    "Veličina ekrana (inch)": "Golemina na ekran (inch)",
+    "Energetska klasa": "Energetska klasa",
+    "Procesor": "Procesor",
+    "RAM (GB)": "RAM (GB)",
+    "Desktop računari": "Desktop komputeri",
+    "Grafička karta": "Grafička karta",
+    "Kapacitet diska": "Kapacitet na disk",
+    "Laptopi": "Laptopi",
+    "Veličina ekrana": "Golemina na ekran",
+    "Kompjuterska oprema": "Komputerska oprema",
+    "Tip (monitor, tastatura, miš)": "Tip (monitor, tastatura, miš)",
+    "Softver": "Softver",
+    "Tip (operativni sistem, antivirus, poslovni softver)": "Tip (operativen sistem, antivirus, posloven softver)",
+    "Platforma (PC, konzola, mobilni)": "Platforma (PC, konzola, mobilni)",
+    "Žanr": "Žanr",
+    "Prstenovi": "Prsteni",
+    "Veličina": "Golemina",
+    "Sa dragim kamenom (da/ne)": "So drag kamen (da/ne)",
+    "Ogrlice": "Ogrlici",
+    "Dužina (cm)": "Dolzina (cm)",
+    "Narukvice": "Narukvici",
+    "Minđuše": "Mindjuši",
+    "Tip (na klipsu, probušene, viseće)": "Tip (na klipsa, probušeni, visečki)",
+    "Televizori": "Televizori",
+    "Rezolucija (HD, Full HD, 4K, 8K)": "Rezolucija (HD, Full HD, 4K, 8K)",
+    "Pametni TV (da/ne)": "Pameten TV (da/ne)",
+    "Projektori": "Proektori",
+    "Svjetlina (lumen)": "Svetlina (lumen)",
+    "Maksimalna rezolucija": "Maksimalna rezolucija",
+    "Video oprema": "Video oprema",
+    "Tip (Blu-ray plejer, DVD plejer, set-top box)": "Tip (Blu-ray pleer, DVD pleer, set-top box)",
+    "Tip bicikla": "Tip na velosiped",
+    "Veličina rama (inch)": "Golemina na ram (inch)",
+    "Planinski bicikli": "Planinski velosipedi",
+    "Broj brzina": "Broj na brzini",
+    "Električni bicikli": "Električni velosipedi",
+    "Autonomija baterije (km)": "Avtonomija na baterija (km)",
+    "Dodaci za bicikle": "Dodatoci za velosipedi",
+    "Tip dodatka (kaciga, svjetla, zaključavanje)": "Tip na dodatok (kaciga, svetla, zaklučuvanje)",
+    "Vrsta ljubimca": "Vid na ljubimac",
+    "Starost ljubimca": "Starost na ljubimac",
+    "Pol ljubimca (muški, ženski)": "Pol na ljubimac (maški, ženski)",
+    "Psi": "Kučinja",
+    "Rasa": "Rasa",
+    "Vakcinacija (da/ne)": "Vakcinacija (da/ne)",
+    "Mačke": "Mački",
+    "Sterilizacija (da/ne)": "Sterilizacija (da/ne)",
+    "Ptice": "Ptici",
+    "Vrsta": "Vid",
+    "Ribe": "Ribi",
+    "Vrsta (slatkovodne, morske)": "Vid (slatkovodni, morski)",
+    "Tip akvarijuma": "Tip na akvarium",
+    "Foto-Video": "Foto-Video",
+    "Tip uređaja": "Tip na ured",
+    "Rezolucija": "Rezolucija",
+    "Fotoaparati": "Fotoaparati",
+    "Tip (DSLR, mirrorless, kompaktni)": "Tip (DSLR, mirrorless, kompaktni)",
+    "Kamere": "Kamere",
+    "Tip (akcione, profesionalne, sigurnosne)": "Tip (akcioni, profesionalni, sigurnosni)",
+    "Dronovi": "Dronovi",
+    "Maksimalna visina leta (m)": "Maksimalna visina na let (m)",
+    "Autonomija baterije (min)": "Avtonomija na baterija (min)",
+    "Tip instrumenta": "Tip na instrument",
+    "Žičani instrumenti": "Žičani instrumenti",
+    "Tip (gitara, violina, ukulele)": "Tip (gitara, violina, ukulele)",
+    "Broj žica": "Broj na žici",
+    "Klasični instrumenti": "Klasični instrumenti",
+    "Perkusioni instrumenti": "Udarni instrumenti",
+    "Tip mehanizma": "Tip na mehanizam",
+    "Ručno nošeni": "Racno noseni",
+    "Materijal narukvice (koža, metal, plastika)": "Materijal na narukvica (koža, metal, plastika)",
+    "Džepni": "Džepni",
+    "Materijal kućišta (zlato, srebro, čelik)": "Materijal na kućište (zlato, srebro, čelik)",
+    "Pametni satovi": "Pametni časovnici",
+    "Funkcije": "Funkcii",
+    "Stanje (restaurirano, originalno)": "Sostojba (restaurirano, originalno)",
+    "Period": "Period",
+    "Umjetnine": "Umetnički dela",
+    "Potpis autora (da/ne)": "Potpis na avtor (da/ne)",
+    "Kolekcionarski predmeti": "Kolekcionerski predmeti",
+    "Zemljište": "Zemjište",
+    "Garaže": "Garaži",
+    "Kuće": "Kuki",
+    "Stanovi i apartmani": "Stanovi i apartmani",
+    "Poslovni prostori": "Delovni prostori",
+    "Skladišta": "Skladišta",
+    "Konzole": "Konzoli",
+    "Kompjuter": "Komputer",
+    "Periferija": "Periferija",
+    "Za kuhinju": "Za kujna",
+    "Za kupatilo": "Za kupatilo",
+    "Ostalo": "Ostano",
+    "Telefoni": "Telefoni",
+    "Tableti": "Tableti",
+    "eBook tableti": "eBook tableti",
+    "Za dnevni boravak": "Za dnevna soba",
+    "Za spavaću sobu": "Za spalna soba",
+    "Ponuda poslova": "Ponuda na raboti",
+    "Potražnja poslova": "Pobaruvanje na raboti",
+    "Automobili": "Avtomobili",
+    "Motori": "Motori",
+    "Transportna vozila": "Transportni vozila",
+    "Poljoporivredna vozila": "Poljoprivredni vozila",
+    "Nautika": "Nautika",
+    "Radne mašine": "Rabotni mašini",
+    "Kamperi": "Kamperi"
+
 }
