--- a/frontend/public/assets/i18n/si.json
+++ b/frontend/public/assets/i18n/si.json
@@ -94,5 +94,173 @@
         "howToContactSellerContent": "Prodajalca lahko kontaktirate s klikom na gumb \"Kontaktiraj prodajalca\" na strani oglasa in pošljete sporočilo prek našega sistema za sporočanje.",
         "returnPolicy": "Kakšna je politika vračil?",
         "returnPolicyContent": "Nimamo politike vračil. Kupci naj bodo pozorni na lažne oglase in prevare."
-    }
+    },
+    "Nekretnine": "Nepremičnine",
+    "Vozila": "Vozila",
+    "Poslovi": "Dela",
+    "Namještaj": "Pohištvo",
+    "Mobilni uređaji": "Mobilne naprave",
+    "Bijela tehnika": "Gospodinjski aparati",
+    "Računari": "Računalniki",
+    "Video igre": "Video igre",
+    "Nakit": "Nakit",
+    "Tv i video": "TV in video",
+    "Biciklizam": "Kolesarjenje",
+    "Kućni ljubimci": "Hišni ljubljenčki",
+    "Foto-video": "Foto-video",
+    "Muzički instrumenti": "Glasbeni instrumenti",
+    "Satovi": "Ure",
+    "Antikviteti": "Antikvitete",
+    "Površina (m²)": "Površina (m²)",
+    "Lokacija": "Lokacija",
+    "Stanje (novogradnja, starogradnja, renovirano)": "Stanje (novogradnja, starogradnja, prenovljeno)",
+    "Broj soba": "Število sob",
+    "Godina gradnje": "Leto gradnje",
+    "Tip kuće (samostalna, dvojna, u nizu)": "Tip hiše (samostojna, dvojna, vrstna)",
+    "Dodatno (garaža, dvorište, terasa, bazen)": "Dodatno (garaža, dvorišče, terasa, bazen)",
+    "Sprat": "Nadstropje",
+    "Lift (da/ne)": "Dvigalo (da/ne)",
+    "Namještenost (namješten, polunamješten, nenamješten)": "Opremljenost (opremljeno, delno opremljeno, neopremljeno)",
+    "Namjena (građevinsko, poljoprivredno, industrijsko)": "Namen (gradbeno, kmetijsko, industrijsko)",
+    "Pristupni put (da/ne)": "Dostopna pot (da/ne)",
+    "Vrsta garaže (privatna, zajednička, podzemna)": "Vrsta garaže (zasebna, skupna, podzemna)",
+    "Sigurnosni sistem (da/ne)": "Varnostni sistem (da/ne)",
+    "Tip (kancelarija, lokal, magacin)": "Tip (pisarna, lokal, skladišče)",
+    "Prilagođeno za invalidna lica (da/ne)": "Prilagojeno za invalide (da/ne)",
+    "Pristup kamionima (da/ne)": "Dostop za tovornjake (da/ne)",
+    "Visina plafona (m)": "Višina stropa (m)",
+    "Marka": "Znamka",
+    "Model": "Model",
+    "Godina proizvodnje": "Leto proizvodnje",
+    "Gorivo (benzin, dizel, električni, hibrid)": "Gorivo (bencin, dizel, električno, hibridno)",
+    "Kubikaža (cm³)": "Prostornina motorja (cm³)",
+    "Snaga motora (kW/KS)": "Moč motorja (kW/KM)",
+    "Mjenjač (manuelni, automatski)": "Menjalnik (ročni, avtomatski)",
+    "Kilometraža": "Kilometrina",
+    "Tip": "Tip",
+    "Tip vozila (kombi, kamion, prikolica)": "Tip vozila (kombiniran, tovornjak, prikolica)",
+    "Kapacitet (t)": "Kapaciteta (t)",
+    "Dimenzije tovarnog prostora": "Dimenzije tovornega prostora",
+    "Radni sati": "Delovne ure",
+    "Tip plovila": "Tip plovila",
+    "Dužina (m)": "Dolžina (m)",
+    "Broj kreveta": "Število postelj",
+    "Opremljenost (kuhinja, kupatilo)": "Opremljenost (kuhinja, kopalnica)",
+    "Tip posla (stalni, honorarni, sezonski)": "Tip dela (stalno, honorarno, sezonsko)",
+    "Plata": "Plača",
+    "Industrija": "Industrija",
+    "Radno vrijeme": "Delovni čas",
+    "Struka": "Strokovno področje",
+    "Radno iskustvo (godine)": "Delovne izkušnje (leta)",
+    "Materijal (drvo, metal, staklo, tkanina)": "Material (les, kovina, steklo, tkanina)",
+    "Stanje (novo, polovno)": "Stanje (novo, rabljeno)",
+    "Tip ekrana (LCD, AMOLED)": "Tip zaslona (LCD, AMOLED)",
+    "Veličina ekrana (inch)": "Velikost zaslona (palcev)",
+    "Energetska klasa": "Energijski razred",
+    "Procesor": "Procesor",
+    "RAM (GB)": "RAM (GB)",
+    "Desktop računari": "Namizni računalniki",
+    "Grafička karta": "Grafična kartica",
+    "Kapacitet diska": "Kapaciteta diska",
+    "Laptopi": "Prenosniki",
+    "Veličina ekrana": "Velikost zaslona",
+    "Kompjuterska oprema": "Računalniška oprema",
+    "Tip (monitor, tastatura, miš)": "Tip (monitor, tipkovnica, miška)",
+    "Softver": "Programska oprema",
+    "Tip (operativni sistem, antivirus, poslovni softver)": "Tip (operacijski sistem, antivirus, poslovna programska oprema)",
+    "Platforma (PC, konzola, mobilni)": "Platforma (PC, konzola, mobilni)",
+    "Žanr": "Žanr",
+    "Prstenovi": "Prstani",
+    "Veličina": "Velikost",
+    "Sa dragim kamenom (da/ne)": "Z dragim kamnom (da/ne)",
+    "Ogrlice": "Ogrlice",
+    "Dužina (cm)": "Dolžina (cm)",
+    "Narukvice": "Zapestnice",
+    "Minđuše": "Uhani",
+    "Tip (na klipsu, probušene, viseće)": "Tip (na sponko, prebodene, viseče)",
+    "Televizori": "Televizorji",
+    "Rezolucija (HD, Full HD, 4K, 8K)": "Ločljivost (HD, Full HD, 4K, 8K)",
+    "Pametni TV (da/ne)": "Pametni TV (da/ne)",
+    "Projektori": "Projektorji",
+    "Svjetlina (lumen)": "Svetlost (lumnov)",
+    "Maksimalna rezolucija": "Največja ločljivost",
+    "Video oprema": "Video oprema",
+    "Tip (Blu-ray plejer, DVD plejer, set-top box)": "Tip (Blu-ray predvajalnik, DVD predvajalnik, set-top box)",
+    "Tip bicikla": "Tip kolesa",
+    "Veličina rama (inch)": "Velikost okvirja (palcev)",
+    "Planinski bicikli": "Gorska kolesa",
+    "Broj brzina": "Število prestav",
+    "Električni bicikli": "Električna kolesa",
+    "Autonomija baterije (km)": "Avtonomija baterije (km)",
+    "Dodaci za bicikle": "Dodatki za kolesa",
+    "Tip dodatka (kaciga, svjetla, zaključavanje)": "Tip dodatka (čelada, luči, ključavnica)",
+    "Vrsta ljubimca": "Vrsta ljubljenčka",
+    "Starost ljubimca": "Starost ljubljenčka",
+    "Pol ljubimca (muški, ženski)": "Spol ljubljenčka (moški, ženski)",
+    "Psi": "Psi",
+    "Rasa": "Pasma",
+    "Vakcinacija (da/ne)": "Cepljenje (da/ne)",
+    "Mačke": "Mačke",
+    "Sterilizacija (da/ne)": "Sterilizacija (da/ne)",
+    "Ptice": "Ptice",
+    "Vrsta": "Vrsta",
+    "Ribe": "Ribe",
+    "Vrsta (slatkovodne, morske)": "Vrsta (sladkovodne, morske)",
+    "Tip akvarijuma": "Tip akvarija",
+    "Foto-Video": "Foto-Video",
+    "Tip uređaja": "Tip naprave",
+    "Rezolucija": "Ločljivost",
+    "Fotoaparati": "Fotoaparati",
+    "Tip (DSLR, mirrorless, kompaktni)": "Tip (DSLR, brezzrcalni, kompaktni)",
+    "Kamere": "Kamere",
+    "Tip (akcione, profesionalne, sigurnosne)": "Tip (akcijske, profesionalne, varnostne)",
+    "Dronovi": "Droni",
+    "Maksimalna visina leta (m)": "Največja višina leta (m)",
+    "Autonomija baterije (min)": "Avtonomija baterije (min)",
+    "Tip instrumenta": "Tip instrumenta",
+    "Žičani instrumenti": "Strunski instrumenti",
+    "Tip (gitara, violina, ukulele)": "Tip (kitara, violina, ukulele)",
+    "Broj žica": "Število strun",
+    "Klasični instrumenti": "Klasični instrumenti",
+    "Perkusioni instrumenti": "Tolkala",
+    "Tip mehanizma": "Tip mehanizma",
+    "Ručno nošeni": "Ročne ure",
+    "Materijal narukvice (koža, metal, plastika)": "Material zapestnice (usnje, kovina, plastika)",
+    "Džepni": "Žepne ure",
+    "Materijal kućišta (zlato, srebro, čelik)": "Material ohišja (zlato, srebro, jeklo)",
+    "Pametni satovi": "Pametne ure",
+    "Funkcije": "Funkcije",
+    "Stanje (restaurirano, originalno)": "Stanje (restavrirano, originalno)",
+    "Period": "Obdobje",
+    "Umjetnine": "Umetnine",
+    "Potpis autora (da/ne)": "Podpis avtorja (da/ne)",
+    "Kolekcionarski predmeti": "Zbirateljski predmeti",
+    "Zemljište": "Zemljišča",
+    "Garaže": "Garaže",
+    "Kuće": "Hiše",
+    "Stanovi i apartmani": "Stanovanja in apartmaji",
+    "Poslovni prostori": "Poslovni prostori",
+    "Skladišta": "Skladišča",
+    "Konzole": "Konzole",
+    "Kompjuter": "Računalnik",
+    "Periferija": "Periferne naprave",
+    "Za kuhinju": "Za kuhinjo",
+    "Za kupatilo": "Za kopalnico",
+    "Ostalo": "Ostalo",
+    "Telefoni": "Telefoni",
+    "Tableti": "Tablice",
+    "eBook tableti": "eBook tablice",
+    "Za dnevni boravak": "Za dnevno sobo",
+    "Za spavaću sobu": "Za spalnico",
+    "Ponuda poslova": "Ponudba del",
+    "Potražnja poslova": "Povpraševanje po delih",
+    "Automobili": "Avtomobili",
+    "Motori": "Motorji",
+    "Transportna vozila": "Transportna vozila",
+    "Poljoporivredna vozila": "Kmetijska vozila",
+    "Nautika": "Navtika",
+    "Radne mašine": "Delovni stroji",
+    "Kamperi": "Kampi"
+
+
 }
