--- a/frontend/public/assets/i18n/sr-hr-bs-cg.json
+++ b/frontend/public/assets/i18n/sr-hr-bs-cg.json
@@ -98,5 +98,172 @@
         "howToContactSellerContent": "Možete kontaktirati prodavca klikom na dugme \"Kontaktiraj prodavca\" na stranici oglasa.",
         "returnPolicy": "Koja je politika povrata?",
         "returnPolicyContent": "Nemamo politiku povrata. Molimo vas da budete oprezni i svesni mogućih lažnih oglasa i prevara."
-    }
+    },
+    "Nekretnine": "Nekretnine",
+    "Vozila": "Vozila",
+    "Poslovi": "Poslovi",
+    "Namještaj": "Namještaj",
+    "Mobilni uređaji": "Mobilni uređaji",
+    "Bijela tehnika": "Bijela tehnika",
+    "Računari": "Računari",
+    "Video igre": "Video igre",
+    "Nakit": "Nakit",
+    "Tv i video": "Tv i video",
+    "Biciklizam": "Biciklizam",
+    "Kućni ljubimci": "Kućni ljubimci",
+    "Foto-video": "Foto-video",
+    "Muzički instrumenti": "Muzički instrumenti",
+    "Satovi": "Satovi",
+    "Antikviteti": "Antikviteti",
+    "Površina (m²)": "Površina (m²)",
+    "Lokacija": "Lokacija",
+    "Stanje (novogradnja, starogradnja, renovirano)": "Stanje (novogradnja, starogradnja, renovirano)",
+    "Broj soba": "Broj soba",
+    "Godina gradnje": "Godina gradnje",
+    "Tip kuće (samostalna, dvojna, u nizu)": "Tip kuće (samostalna, dvojna, u nizu)",
+    "Dodatno (garaža, dvorište, terasa, bazen)": "Dodatno (garaža, dvorište, terasa, bazen)",
+    "Sprat": "Sprat",
+    "Lift (da/ne)": "Lift (da/ne)",
+    "Namještenost (namješten, polunamješten, nenamješten)": "Namještenost (namješten, polunamješten, nenamješten)",
+    "Namjena (građevinsko, poljoprivredno, industrijsko)": "Namjena (građevinsko, poljoprivredno, industrijsko)",
+    "Pristupni put (da/ne)": "Pristupni put (da/ne)",
+    "Vrsta garaže (privatna, zajednička, podzemna)": "Vrsta garaže (privatna, zajednička, podzemna)",
+    "Sigurnosni sistem (da/ne)": "Sigurnosni sistem (da/ne)",
+    "Tip (kancelarija, lokal, magacin)": "Tip (kancelarija, lokal, magacin)",
+    "Prilagođeno za invalidna lica (da/ne)": "Prilagođeno za invalidna lica (da/ne)",
+    "Pristup kamionima (da/ne)": "Pristup kamionima (da/ne)",
+    "Visina plafona (m)": "Visina plafona (m)",
+    "Marka": "Marka",
+    "Model": "Model",
+    "Godina proizvodnje": "Godina proizvodnje",
+    "Gorivo (benzin, dizel, električni, hibrid)": "Gorivo (benzin, dizel, električni, hibrid)",
+    "Kubikaža (cm³)": "Kubikaža (cm³)",
+    "Snaga motora (kW/KS)": "Snaga motora (kW/KS)",
+    "Mjenjač (manuelni, automatski)": "Mjenjač (manuelni, automatski)",
+    "Kilometraža": "Kilometraža",
+    "Tip": "Tip",
+    "Tip vozila (kombi, kamion, prikolica)": "Tip vozila (kombi, kamion, prikolica)",
+    "Kapacitet (t)": "Kapacitet (t)",
+    "Dimenzije tovarnog prostora": "Dimenzije tovarnog prostora",
+    "Radni sati": "Radni sati",
+    "Tip plovila": "Tip plovila",
+    "Dužina (m)": "Dužina (m)",
+    "Broj kreveta": "Broj kreveta",
+    "Opremljenost (kuhinja, kupatilo)": "Opremljenost (kuhinja, kupatilo)",
+    "Tip posla (stalni, honorarni, sezonski)": "Tip posla (stalni, honorarni, sezonski)",
+    "Plata": "Plata",
+    "Industrija": "Industrija",
+    "Radno vrijeme": "Radno vrijeme",
+    "Struka": "Struka",
+    "Radno iskustvo (godine)": "Radno iskustvo (godine)",
+    "Materijal (drvo, metal, staklo, tkanina)": "Materijal (drvo, metal, staklo, tkanina)",
+    "Stanje (novo, polovno)": "Stanje (novo, polovno)",
+    "Tip ekrana (LCD, AMOLED)": "Tip ekrana (LCD, AMOLED)",
+    "Veličina ekrana (inch)": "Veličina ekrana (inch)",
+    "Energetska klasa": "Energetska klasa",
+    "Procesor": "Procesor",
+    "RAM (GB)": "RAM (GB)",
+    "Desktop računari": "Desktop računari",
+    "Grafička karta": "Grafička karta",
+    "Kapacitet diska": "Kapacitet diska",
+    "Laptopi": "Laptopi",
+    "Veličina ekrana": "Veličina ekrana",
+    "Kompjuterska oprema": "Kompjuterska oprema",
+    "Tip (monitor, tastatura, miš)": "Tip (monitor, tastatura, miš)",
+    "Softver": "Softver",
+    "Tip (operativni sistem, antivirus, poslovni softver)": "Tip (operativni sistem, antivirus, poslovni softver)",
+    "Platforma (PC, konzola, mobilni)": "Platforma (PC, konzola, mobilni)",
+    "Žanr": "Žanr",
+    "Prstenovi": "Prstenovi",
+    "Veličina": "Veličina",
+    "Sa dragim kamenom (da/ne)": "Sa dragim kamenom (da/ne)",
+    "Ogrlice": "Ogrlice",
+    "Dužina (cm)": "Dužina (cm)",
+    "Narukvice": "Narukvice",
+    "Minđuše": "Minđuše",
+    "Tip (na klipsu, probušene, viseće)": "Tip (na klipsu, probušene, viseće)",
+    "Televizori": "Televizori",
+    "Rezolucija (HD, Full HD, 4K, 8K)": "Rezolucija (HD, Full HD, 4K, 8K)",
+    "Pametni TV (da/ne)": "Pametni TV (da/ne)",
+    "Projektori": "Projektori",
+    "Svjetlina (lumen)": "Svjetlina (lumen)",
+    "Maksimalna rezolucija": "Maksimalna rezolucija",
+    "Video oprema": "Video oprema",
+    "Tip (Blu-ray plejer, DVD plejer, set-top box)": "Tip (Blu-ray plejer, DVD plejer, set-top box)",
+    "Tip bicikla": "Tip bicikla",
+    "Veličina rama (inch)": "Veličina rama (inch)",
+    "Planinski bicikli": "Planinski bicikli",
+    "Broj brzina": "Broj brzina",
+    "Električni bicikli": "Električni bicikli",
+    "Autonomija baterije (km)": "Autonomija baterije (km)",
+    "Dodaci za bicikle": "Dodaci za bicikle",
+    "Tip dodatka (kaciga, svjetla, zaključavanje)": "Tip dodatka (kaciga, svjetla, zaključavanje)",
+    "Vrsta ljubimca": "Vrsta ljubimca",
+    "Starost ljubimca": "Starost ljubimca",
+    "Pol ljubimca (muški, ženski)": "Pol ljubimca (muški, ženski)",
+    "Psi": "Psi",
+    "Rasa": "Rasa",
+    "Vakcinacija (da/ne)": "Vakcinacija (da/ne)",
+    "Mačke": "Mačke",
+    "Sterilizacija (da/ne)": "Sterilizacija (da/ne)",
+    "Ptice": "Ptice",
+    "Vrsta": "Vrsta",
+    "Ribe": "Ribe",
+    "Vrsta (slatkovodne, morske)": "Vrsta (slatkovodne, morske)",
+    "Tip akvarijuma": "Tip akvarijuma",
+    "Foto-Video": "Foto-Video",
+    "Tip uređaja": "Tip uređaja",
+    "Rezolucija": "Rezolucija",
+    "Fotoaparati": "Fotoaparati",
+    "Tip (DSLR, mirrorless, kompaktni)": "Tip (DSLR, mirrorless, kompaktni)",
+    "Kamere": "Kamere",
+    "Tip (akcione, profesionalne, sigurnosne)": "Tip (akcione, profesionalne, sigurnosne)",
+    "Dronovi": "Dronovi",
+    "Maksimalna visina leta (m)": "Maksimalna visina leta (m)",
+    "Autonomija baterije (min)": "Autonomija baterije (min)",
+    "Tip instrumenta": "Tip instrumenta",
+    "Žičani instrumenti": "Žičani instrumenti",
+    "Tip (gitara, violina, ukulele)": "Tip (gitara, violina, ukulele)",
+    "Broj žica": "Broj žica",
+    "Klasični instrumenti": "Klasični instrumenti",
+    "Perkusioni instrumenti": "Perkusioni instrumenti",
+    "Tip mehanizma": "Tip mehanizma",
+    "Ručno nošeni": "Ručno nošeni",
+    "Materijal narukvice (koža, metal, plastika)": "Materijal narukvice (koža, metal, plastika)",
+    "Džepni": "Džepni",
+    "Materijal kućišta (zlato, srebro, čelik)": "Materijal kućišta (zlato, srebro, čelik)",
+    "Pametni satovi": "Pametni satovi",
+    "Funkcije": "Funkcije",
+    "Stanje (restaurirano, originalno)": "Stanje (restaurirano, originalno)",
+    "Period": "Period",
+    "Umjetnine": "Umjetnine",
+    "Potpis autora (da/ne)": "Potpis autora (da/ne)",
+    "Kolekcionarski predmeti": "Kolekcionarski predmeti",
+    "Zemljište": "Zemljište",
+    "Garaže": "Garaže",
+    "Kuće": "Kuće",
+    "Stanovi i apartmani": "Stanovi i apartmani",
+    "Poslovni prostori": "Poslovni prostori",
+    "Skladišta": "Skladišta",
+    "Konzole": "Konzole",
+    "Kompjuter": "Kompjuter",
+    "Periferija": "Periferija",
+    "Za kuhinju": "Za kuhinju",
+    "Za kupatilo": "Za kupatilo",
+    "Ostalo": "Ostalo",
+    "Telefoni": "Telefoni",
+    "Tableti": "Tableti",
+    "eBook tableti": "eBook tableti",
+    "Za dnevni boravak": "Za dnevni boravak",
+    "Za spavaću sobu": "Za spavaću sobu",
+    "Ponuda poslova": "Ponuda poslova",
+    "Potražnja poslova": "Potražnja poslova",
+    "Automobili": "Automobili",
+    "Motori": "Motori",
+    "Transportna vozila": "Transportna vozila",
+    "Poljoprivredna vozila": "Poljoprivredna vozila",
+    "Nautika": "Nautika",
+    "Radne mašine": "Radne mašine",
+    "Kamperi": "Kamperi"
+
 }
